--- a/leanpkg.toml
+++ b/leanpkg.toml
@@ -5,4 +5,5 @@ lean_version = "leanprover-community/lean:3.23.0"
 path = "src"
 
 [dependencies]
+smt2_interface = {git = "https://github.com/leanprover/smt2_interface.git", rev = "7ff0ce248b68ea4db2a2d4966a97b5786da05ed7"}
 mathlib = {git = "https://github.com/leanprover/mathlib", rev = "61f63649166658dad1931c4de51e1122a1a852e8"}
